<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".REGenterGENDER">
    <RadioGroup
        android:id="@+id/MaleOrFemale"
        android:layout_width="157dp"
        android:layout_height="97dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseGenderHere">

        <RadioButton
            android:id="@+id/kobel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/suka"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female" />

    </RadioGroup>

    <TextView
        android:id="@+id/chooseGenderHere"
        android:layout_width="311dp"
        android:layout_height="45dp"
        android:layout_marginTop="68dp"
        android:text="@string/chooseGenderHere"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backToBreed"
        android:layout_width="127dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="116dp"
        android:text="@string/back"
        app:layout_constraintEnd_toStartOf="@+id/continueToBirthd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/continueToBirthd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="8dp"
        android:text="@string/enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>